# erpnext-shipping

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linters.yml
erpnext_shipping/: __init__.py  hooks.py  install.py  patches.txt
erpnext_shipping/config/: desktop.py  docs.py
erpnext_shipping/erpnext_shipping/: shipping.py  utils.py
erpnext_shipping/erpnext_shipping/doctype/letmeship/: letmeship.json  letmeship.py  test_letmeship.py
erpnext_shipping/erpnext_shipping/doctype/packlink/: packlink.js  packlink.json  packlink.py  test_packlink.py
erpnext_shipping/erpnext_shipping/doctype/parcel_service/: parcel_service.json  parcel_service.py  test_parcel_service.py
erpnext_shipping/erpnext_shipping/doctype/parcel_service_type/: parcel_service_type.json  parcel_service_type.py  test_parcel_service_type.py
erpnext_shipping/erpnext_shipping/doctype/sendcloud/: sendcloud.json  (+2 more)
erpnext_shipping/erpnext_shipping/patches/: change_tracking_url_column_type.py  create_custom_delivery_note_fields.py
erpnext_shipping/public/: shipping.bundle.js
erpnext_shipping/public/js/: shipment.js  shipment_service_selector.html
erpnext_shipstation/: hooks.py  modules.txt  patches.txt
erpnext_shipstation/config/: desktop.py  docs.py
erpnext_shipstation/erpnext_shipstation/: shipping.py  utils.py
erpnext_shipstation/erpnext_shipstation/patches/: create_custom_delivery_note_fields.py
erpnext_shipstation/public/: build.json
erpnext_shipstation/public/js/: shipment.js
(+25 files in other folders)
